@@ -17,7 +17,15 @@
 package com.bytechef.component.ai.vectorstore.knowledgebase;
 
 import static com.bytechef.component.ai.vectorstore.knowledgebase.constant.KnowledgeBaseVectorStoreConstants.KNOWLEDGE_BASE;
+import static com.bytechef.component.ai.vectorstore.knowledgebase.destination.KnowledgeBaseItemWriter.MODE;
+import static com.bytechef.component.ai.vectorstore.knowledgebase.destination.KnowledgeBaseItemWriter.MODE_FULL_REPLACE;
+import static com.bytechef.component.ai.vectorstore.knowledgebase.destination.KnowledgeBaseItemWriter.MODE_PARTIAL;
+import static com.bytechef.component.ai.vectorstore.knowledgebase.destination.KnowledgeBaseItemWriter.SOURCE_ID;
 import static com.bytechef.component.definition.ComponentDsl.component;
+import static com.bytechef.component.definition.ComponentDsl.integer;
+import static com.bytechef.component.definition.ComponentDsl.option;
+import static com.bytechef.component.definition.ComponentDsl.string;
+import static com.bytechef.component.definition.datastream.ItemWriter.DESTINATION;
 import static com.bytechef.platform.component.definition.ai.vectorstore.DocumentReaderFunction.DOCUMENT_READER;
 import static com.bytechef.platform.component.definition.ai.vectorstore.DocumentTransformerFunction.DOCUMENT_TRANSFORMER;
 
@@ -28,10 +36,13 @@ import com.bytechef.component.ai.vectorstore.knowledgebase.action.KnowledgeBaseS
 import com.bytechef.component.ai.vectorstore.knowledgebase.action.KnowledgeBaseUpdateAction;
 import com.bytechef.component.ai.vectorstore.knowledgebase.cluster.KnowledgeBaseSearchTool;
 import com.bytechef.component.ai.vectorstore.knowledgebase.cluster.KnowledgeBaseUpdateTool;
+import com.bytechef.component.ai.vectorstore.knowledgebase.destination.KnowledgeBaseItemWriter;
 import com.bytechef.component.ai.vectorstore.knowledgebase.util.KnowledgeBaseVectorStore;
 import com.bytechef.component.definition.ClusterElementDefinition.ClusterElementType;
 import com.bytechef.component.definition.ComponentCategory;
 import com.bytechef.component.definition.ComponentDefinition;
+import com.bytechef.component.definition.ComponentDsl;
+import com.bytechef.component.definition.ComponentDsl.ModifiableClusterElementDefinition;
 import com.bytechef.platform.component.definition.AbstractComponentDefinitionWrapper;
 import com.bytechef.platform.component.definition.VectorStoreComponentDefinition;
 import com.bytechef.platform.component.service.ClusterElementDefinitionService;
@@ -41,6 +52,9 @@ import com.bytechef.platform.knowledgebase.service.KnowledgeBaseDocumentChunkSer
 import com.bytechef.platform.knowledgebase.service.KnowledgeBaseDocumentService;
 import com.bytechef.platform.knowledgebase.service.KnowledgeBaseDocumentTagService;
 import com.bytechef.platform.knowledgebase.service.KnowledgeBaseService;
+import com.bytechef.platform.knowledgebase.service.KnowledgeBaseSourceService;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import org.springframework.ai.vectorstore.VectorStore;
@@ -66,13 +80,14 @@ public class KnowledgeBaseComponentHandler implements ComponentHandler {
         KnowledgeBaseDocumentService knowledgeBaseDocumentService,
         KnowledgeBaseDocumentTagService knowledgeBaseDocumentTagService,
         KnowledgeBaseFileStorage knowledgeBaseFileStorage, KnowledgeBaseService knowledgeBaseService,
+        KnowledgeBaseSourceService knowledgeBaseSourceService,
         @Qualifier("knowledgeBasePgVectorStore") VectorStore vectorStore) {
 
         this.componentDefinition =
             new KnowledgeBaseVectorStoreComponentDefinitionImpl(
                 clusterElementDefinitionService, knowledgeBaseDocumentChunkFacade, knowledgeBaseDocumentChunkService,
                 knowledgeBaseDocumentService, knowledgeBaseDocumentTagService, knowledgeBaseFileStorage,
-                knowledgeBaseService, vectorStore);
+                knowledgeBaseService, knowledgeBaseSourceService, vectorStore);
     }
 
     @Override
@@ -90,7 +105,7 @@ public class KnowledgeBaseComponentHandler implements ComponentHandler {
             KnowledgeBaseDocumentService knowledgeBaseDocumentService,
             KnowledgeBaseDocumentTagService knowledgeBaseDocumentTagService,
             KnowledgeBaseFileStorage knowledgeBaseFileStorage, KnowledgeBaseService knowledgeBaseService,
-            VectorStore vectorStore) {
+            KnowledgeBaseSourceService knowledgeBaseSourceService, VectorStore vectorStore) {
 
             super(
                 component(KNOWLEDGE_BASE)
@@ -119,7 +134,39 @@ public class KnowledgeBaseComponentHandler implements ComponentHandler {
                             knowledgeBaseDocumentService, knowledgeBaseFileStorage, knowledgeBaseService),
                         KnowledgeBaseVectorStore.of(
                             vectorStore, knowledgeBaseDocumentChunkService, knowledgeBaseDocumentService,
-                            knowledgeBaseFileStorage, knowledgeBaseService, knowledgeBaseDocumentTagService)));
+                            knowledgeBaseFileStorage, knowledgeBaseService, knowledgeBaseDocumentTagService),
+                        writeAsDocumentClusterElement(
+                            knowledgeBaseSourceService, knowledgeBaseDocumentService)));
+        }
+
+        private static ModifiableClusterElementDefinition<KnowledgeBaseItemWriter> writeAsDocumentClusterElement(
+            KnowledgeBaseSourceService knowledgeBaseSourceService,
+            KnowledgeBaseDocumentService knowledgeBaseDocumentService) {
+
+            return ComponentDsl.<KnowledgeBaseItemWriter>clusterElement("writeAsDocument")
+                .title("Write as Knowledge Base Document")
+                .description(
+                    "Upsert source records into the target Knowledge Base as documents. " +
+                        "FULL_REPLACE mode tombstones documents whose source_record_id is not seen this run; " +
+                        "PARTIAL mode skips the tombstone sweep for backfills and partial-update workflows.")
+                .type(DESTINATION)
+                .object(() -> new KnowledgeBaseItemWriter(
+                    knowledgeBaseSourceService, knowledgeBaseDocumentService))
+                .properties(
+                    integer(SOURCE_ID)
+                        .label("Knowledge Base Source ID")
+                        .description("ID of the KnowledgeBaseSource that owns this sync.")
+                        .required(true),
+                    string(MODE)
+                        .label("Sync mode")
+                        .description(
+                            "FULL_REPLACE = tombstone records not seen this run (default); " +
+                                "PARTIAL = leave unseen records untouched (use for backfills / partial updates).")
+                        .options(
+                            option(MODE_FULL_REPLACE, MODE_FULL_REPLACE),
+                            option(MODE_PARTIAL, MODE_PARTIAL))
+                        .defaultValue(MODE_FULL_REPLACE)
+                        .required(false));
         }
 
         @Override
@@ -129,18 +176,30 @@ public class KnowledgeBaseComponentHandler implements ComponentHandler {
 
         @Override
         public Map<String, List<String>> getActionClusterElementTypes() {
-            return Map.of(
-                DELETE, List.of(),
-                LOAD, List.of(DOCUMENT_READER.name(), DOCUMENT_TRANSFORMER.name()),
-                SEARCH, List.of(),
-                UPDATE, List.of(DOCUMENT_READER.name(), DOCUMENT_TRANSFORMER.name()));
+            // LinkedHashMap rather than Map.of: Map.of randomises its iteration order per JVM run, so these keys
+            // shuffle in the generated knowledgeBase_v1.json snapshot every time anyone regenerates it. Purely
+            // cosmetic -- JsonFileAssert compares JSON objects order-insensitively -- but it makes each regeneration
+            // produce a spurious diff. These override the VectorStoreComponentDefinition defaults, which are pinned
+            // the same way for the same reason.
+            Map<String, List<String>> actionClusterElementTypes = new LinkedHashMap<>();
+
+            actionClusterElementTypes.put(DELETE, List.of());
+            actionClusterElementTypes.put(LOAD, List.of(DOCUMENT_READER.name(), DOCUMENT_TRANSFORMER.name()));
+            actionClusterElementTypes.put(SEARCH, List.of());
+            actionClusterElementTypes.put(UPDATE, List.of(DOCUMENT_READER.name(), DOCUMENT_TRANSFORMER.name()));
+
+            return Collections.unmodifiableMap(actionClusterElementTypes);
         }
 
         @Override
         public Map<String, List<String>> getClusterElementClusterElementTypes() {
-            return Map.of(
-                VECTOR_STORE, List.of(),
-                SEARCH, List.of());
+            // See getActionClusterElementTypes above -- same reason.
+            Map<String, List<String>> clusterElementClusterElementTypes = new LinkedHashMap<>();
+
+            clusterElementClusterElementTypes.put(VECTOR_STORE, List.of());
+            clusterElementClusterElementTypes.put(SEARCH, List.of());
+
+            return Collections.unmodifiableMap(clusterElementClusterElementTypes);
         }
     }
 }
